fix: resolve security and config review comments on PR #550
- JMX: bind to localhost with local.only=true + SSH tunneling guidance;
  document auth/TLS alternative for network-exposed scenarios
- GC logging: replace deprecated PrintGCDetails/PrintGCDateStamps/Xloggc
  with Java 9+ unified logging (-Xlog:gc*:...)
- Docker Compose: switch from deploy.resources (Swarm-only) to
  mem_limit/cpus/mem_reservation for non-Swarm docker compose
- RESOURCE_OPTIMIZATION_ANALYSIS.md: mark JMX as optional/Phase 3,
  add security notes throughout

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>